--- a/posts/package.json
+++ b/posts/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@iceydc-projects/common": "^1.0.1",
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
