--- a/comments/package.json
+++ b/comments/package.json
@@ -7,7 +7,7 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
-  "name": "posts",
+  "name": "comments",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -24,13 +24,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@types/supertest": "^2.0.12",
-    "jest": "^29.4.1",
-    "mongodb-memory-server": "^8.11.4",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5"
-  }
+  "description": ""
 }
