--- a/comments/package.json
+++ b/comments/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@iceydc-projects/common": "^1.0.1",
     "@types/express": "^4.17.17",
+    "axios": "^1.3.2",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
     "ts-node-dev": "^2.0.0",
@@ -22,7 +23,7 @@
     ]
   },
   "keywords": [],
-  "author": "",
+  "author": "Luca Picovici",
   "license": "ISC",
   "description": ""
 }
