--- a/event-bus/package.json
+++ b/event-bus/package.json
@@ -4,11 +4,10 @@
     "@types/express": "^4.17.17",
     "axios": "^1.3.2",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
-  "name": "posts",
+  "name": "event-bus",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -23,15 +22,7 @@
     ]
   },
   "keywords": [],
-  "author": "",
+  "author": "Luca Picovici",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@types/supertest": "^2.0.12",
-    "jest": "^29.4.1",
-    "mongodb-memory-server": "^8.11.4",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5"
-  }
+  "description": ""
 }
